{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 60,
  "lineage": "6a94657b-48a3-6d9d-1371-000df19d9213",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086997486593:internet-gateway/igw-05f211c70f4e90b21",
            "id": "igw-05f211c70f4e90b21",
            "owner_id": "086997486593",
            "region": "us-east-1",
            "tags": {
              "Name": "reservation-ig"
            },
            "tags_all": {
              "Name": "reservation-ig"
            },
            "vpc_id": "vpc-08e066b5313f3f822"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "terraform_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:086997486593:loadbalancer/app/api-alb/ac8b5e300d0eba3d",
            "arn_suffix": "app/api-alb/ac8b5e300d0eba3d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "api-alb-899781603.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:086997486593:loadbalancer/app/api-alb/ac8b5e300d0eba3d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "api-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-063ba09efa839b0d8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-093dfc3fe53141d60"
              },
              {
                "subnet_id": "subnet-0c523182f8c40e281"
              }
            ],
            "subnets": [
              "subnet-093dfc3fe53141d60",
              "subnet-0c523182f8c40e281"
            ],
            "tags": {
              "Environment": "api-alb"
            },
            "tags_all": {
              "Environment": "api-alb"
            },
            "vpc_id": "vpc-08e066b5313f3f822",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.terraform_alb_sg",
            "aws_subnet.terraform_public_subnet_2",
            "aws_subnet.terraform_public_subnet_3",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "terraform_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:086997486593:listener/app/api-alb/ac8b5e300d0eba3d/8291feb128a78cec",
            "certificate_arn": "arn:aws:acm:us-east-1:086997486593:certificate/76cf0719-b47d-427f-802b-e82ea930c3d8",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:086997486593:targetgroup/api-target-group/939325aa4224a9de",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:086997486593:listener/app/api-alb/ac8b5e300d0eba3d/8291feb128a78cec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:086997486593:loadbalancer/app/api-alb/ac8b5e300d0eba3d",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-Res-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.terraform_alb",
            "aws_lb_target_group.terraform_alb_target_group",
            "aws_security_group.terraform_alb_sg",
            "aws_subnet.terraform_public_subnet_2",
            "aws_subnet.terraform_public_subnet_3",
            "aws_vpc.terraform_vpc",
            "data.aws_acm_certificate.terraform_sub_domain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "myapp_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:086997486593:targetgroup/api-target-group/939325aa4224a9de",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:086997486593:listener-rule/app/api-alb/ac8b5e300d0eba3d/8291feb128a78cec/9a2cc3a027326e65",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:086997486593:listener-rule/app/api-alb/ac8b5e300d0eba3d/8291feb128a78cec/9a2cc3a027326e65",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:086997486593:listener/app/api-alb/ac8b5e300d0eba3d/8291feb128a78cec",
            "priority": 1,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.terraform_alb",
            "aws_lb_listener.terraform_alb_listener",
            "aws_lb_target_group.terraform_alb_target_group",
            "aws_security_group.terraform_alb_sg",
            "aws_subnet.terraform_public_subnet_2",
            "aws_subnet.terraform_public_subnet_3",
            "aws_vpc.terraform_vpc",
            "data.aws_acm_certificate.terraform_sub_domain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "terraform_alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:086997486593:targetgroup/api-target-group/939325aa4224a9de",
            "arn_suffix": "targetgroup/api-target-group/939325aa4224a9de",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:086997486593:targetgroup/api-target-group/939325aa4224a9de",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:086997486593:loadbalancer/app/api-alb/ac8b5e300d0eba3d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "api-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08e066b5313f3f822"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_private_api_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086997486593:route-table/rtb-076758781ec688c8b",
            "id": "rtb-076758781ec688c8b",
            "owner_id": "086997486593",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "api-routetable"
            },
            "tags_all": {
              "Name": "api-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e066b5313f3f822"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_private_db_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086997486593:route-table/rtb-0dad811e5255b898d",
            "id": "rtb-0dad811e5255b898d",
            "owner_id": "086997486593",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "db-routetable"
            },
            "tags_all": {
              "Name": "db-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e066b5313f3f822"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_public_elb_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086997486593:route-table/rtb-0b551f813d34741e3",
            "id": "rtb-0b551f813d34741e3",
            "owner_id": "086997486593",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f211c70f4e90b21",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "elb-routetable"
            },
            "tags_all": {
              "Name": "elb-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e066b5313f3f822"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "api_sub_assc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046449fdaa4945060",
            "region": "us-east-1",
            "route_table_id": "rtb-076758781ec688c8b",
            "subnet_id": "subnet-02b5fa5cfc1726cb2"
          },
          "dependencies": [
            "aws_route_table.terraform_private_api_routetable",
            "aws_subnet.terraform_private_subnet_3",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "api_sub_assc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad5f93dc4fe67c41",
            "region": "us-east-1",
            "route_table_id": "rtb-076758781ec688c8b",
            "subnet_id": "subnet-0605a9cc999035e11"
          },
          "dependencies": [
            "aws_route_table.terraform_private_api_routetable",
            "aws_subnet.terraform_private_subnet_4",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_sub_assc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077b2d78af74a5a0a",
            "region": "us-east-1",
            "route_table_id": "rtb-0dad811e5255b898d",
            "subnet_id": "subnet-0909b9bb32430501c"
          },
          "dependencies": [
            "aws_route_table.terraform_private_db_routetable",
            "aws_subnet.terraform_private_subnet_1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_sub_assc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf58ae7d6fbdd414",
            "region": "us-east-1",
            "route_table_id": "rtb-0dad811e5255b898d",
            "subnet_id": "subnet-04da2b5eac7ee034b"
          },
          "dependencies": [
            "aws_route_table.terraform_private_db_routetable",
            "aws_subnet.terraform_private_subnet_2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elb_sub_assc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023e96c43bc26bbda",
            "region": "us-east-1",
            "route_table_id": "rtb-0b551f813d34741e3",
            "subnet_id": "subnet-093dfc3fe53141d60"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_route_table.terraform_public_elb_routetable",
            "aws_subnet.terraform_public_subnet_2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elb_sub_assc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bfeb53477419716",
            "region": "us-east-1",
            "route_table_id": "rtb-0b551f813d34741e3",
            "subnet_id": "subnet-0c523182f8c40e281"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_route_table.terraform_public_elb_routetable",
            "aws_subnet.terraform_public_subnet_3",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086997486593:security-group/sg-063ba09efa839b0d8",
            "description": "Allow HTTP inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063ba09efa839b0d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "086997486593",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e066b5313f3f822"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_api_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086997486593:security-group/sg-08ca570357e6cdb98",
            "description": "Only allow alb_sg inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ca570357e6cdb98",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-063ba09efa839b0d8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "api-sg",
            "name_prefix": "",
            "owner_id": "086997486593",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "api-sg"
            },
            "tags_all": {
              "Name": "api-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e066b5313f3f822"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_alb_sg",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086997486593:security-group/sg-04e193686a78185ab",
            "description": "Only allow ec2_sg inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e193686a78185ab",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08ca570357e6cdb98"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "086997486593",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e066b5313f3f822"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_alb_sg",
            "aws_security_group.terraform_api_sg",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086997486593:subnet/subnet-0909b9bb32430501c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0909b9bb32430501c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "086997486593",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "db-subnet-01"
            },
            "tags_all": {
              "Name": "db-subnet-01"
            },
            "vpc_id": "vpc-08e066b5313f3f822"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086997486593:subnet/subnet-04da2b5eac7ee034b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04da2b5eac7ee034b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "086997486593",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "db-subnet-02"
            },
            "tags_all": {
              "Name": "db-subnet-02"
            },
            "vpc_id": "vpc-08e066b5313f3f822"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086997486593:subnet/subnet-02b5fa5cfc1726cb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b5fa5cfc1726cb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "086997486593",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "api-subnet-01"
            },
            "tags_all": {
              "Name": "api-subnet-01"
            },
            "vpc_id": "vpc-08e066b5313f3f822"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_private_subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086997486593:subnet/subnet-0605a9cc999035e11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0605a9cc999035e11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "086997486593",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "api-subnet-02"
            },
            "tags_all": {
              "Name": "api-subnet-02"
            },
            "vpc_id": "vpc-08e066b5313f3f822"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086997486593:subnet/subnet-093dfc3fe53141d60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093dfc3fe53141d60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "086997486593",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "elb-subnet-01"
            },
            "tags_all": {
              "Name": "elb-subnet-01"
            },
            "vpc_id": "vpc-08e066b5313f3f822"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086997486593:subnet/subnet-0c523182f8c40e281",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c523182f8c40e281",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "086997486593",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "elb-subnet-02"
            },
            "tags_all": {
              "Name": "elb-subnet-02"
            },
            "vpc_id": "vpc-08e066b5313f3f822"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086997486593:vpc/vpc-08e066b5313f3f822",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-09f9382883ff45f68",
            "default_route_table_id": "rtb-0d2c65ad10a76477d",
            "default_security_group_id": "sg-04ec1612c4b4a80ae",
            "dhcp_options_id": "dopt-5993dc21",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08e066b5313f3f822",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d2c65ad10a76477d",
            "owner_id": "086997486593",
            "region": "us-east-1",
            "tags": {
              "Name": "reservation-vpc"
            },
            "tags_all": {
              "Name": "reservation-vpc"
            }
          }
        }
      ]
    }
  ]
}